@startuml
'https://plantuml.com/sequence-diagram

hide empty members
left to right direction

 class CSVConverter{
 +readInfoFromCSV
 +arrayListToMatrix
 +isDateInSlot
+timeSlot
 }

 class DateParser{
 -sdf
+dateToCalendar
+StringToCalendar
 }

 class CenterPerformanceUI{
 -fileName
 - m
 +validateTimeIntervalDuration
 +askFilePath
 +askConfirmation
 +validateTimeIntervalDuration
 }


 class CenterPerformanceController{
  +maxsumsublist
  +maxsum
  +readInfoFromCSV
  +timeIntervalOfSublist
  }



 CenterPerformanceUI <.. CenterPerformanceController
 CenterPerformanceController "*" <.. "1" CSVConverter
 CSVConverter "*" <-- "1" DateParser: uses >

@enduml